# rocketseat.containers.desafio

./: .gitignore  README.md  anotacoes_docker-compose.md  build.sh  configuracao_vault.md  docker-compose.yaml
app/: Dockerfile  pyproject.toml
app/alembic/: env.py
app/src/infra/sqlalchemy/config/: database.py
vault/: agent-alembic.hcl  agent-fastapi.hcl
vault/config/: vault.hcl
vault/policies/: alembic-policy.hcl  fastapi-policy.hcl
vault/templates/: alembic.ctmpl  fastapi.ctmpl
